# pyforge

./: .env.example  .gitignore  Architecture.md  BENCHMARKS.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  IMPROVEMENTS.md  LICENSE-APACHE  LICENSE-MIT  PYFORGE_ROADMAP.md  README.md  build.rs  publish-crates.sh  publish-pypi.sh  pyproject.toml
.github/: CONTRIBUTING.md  labels.yml
.github/workflows/: bench-regression.yml  build.yml  ci.yml  publish-wheels.yml
clarax-core/: Cargo.toml  build.rs  pyproject.toml
clarax-django/: Cargo.toml  pyproject.toml
examples/: Cargo.toml  README.md
guide/: book.toml  pyclass-parameters.md
pyforge-build-config/: Cargo.toml
pyforge-core/: Cargo.toml  pyproject.toml
pyforge-django/: Cargo.toml  pyproject.toml
pyforge-django/django_pyforge/: __init__.py  apps.py  middleware.py  serializers.py  validators.py
pyforge-django/django_pyforge/management/commands/: pyforge_doctor.py
pyforge-django/src/: async_bridge.rs  error.rs  field_types.rs  lib.rs  model.rs  serializer.rs  validator.rs
pyforge-ffi/: Cargo.toml
pyforge-introspection/: Cargo.toml
pyforge-macros/: Cargo.toml
pyforge-macros-backend/: Cargo.toml
pyo3-ffi/: Cargo.toml
pyo3-macros/: Cargo.toml
pyo3-shim/: Cargo.toml
pyo3-shim/src/: lib.rs
pytests/: MODULE_DOC.md  README.md
src/: conversion.rs  impl_.rs  inspect.rs  instance.rs  internal.rs  interpreter_lifecycle.rs  lib.rs  marker.rs  prelude.rs  pycell.rs  version.rs
tests/: test_append_to_inittab.rs  test_class_new.rs  test_enum.rs  test_init_race.rs  test_methods.rs  test_pybuffer_drop_without_interpreter.rs  test_pyfunction.rs  test_super.rs  test_text_signature.rs  test_various.rs
(+101 files in other folders)
